--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- <section class="hero is-primary" style="background: linear-gradient(rgba(245,245,245,0.92), rgba(245,245,245,0.92)), url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;"> -->
-    <section class="hero is-primary" style="background: linear-gradient(rgba(245,245,245,0.60), rgba(245,245,245,0.60)), url('static/images/banner.png') center/cover no-repeat;">
+    <section class="hero is-primary" style="background: linear-gradient(rgba(245,245,245,0.60), rgba(245,245,245,0.60)), url('static/images/banner2.jpg') center/cover no-repeat;">
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="project-title" style="color: #000;">
@@ -98,15 +98,6 @@
       </div>
     </section>
 
-    <section class="hero teaser">
-      <div class="container is-max-desktop has-text-centered">
-        <img src="static/images/teaser.png" alt="geometric reasoning">
-        <p>
-          LoongX leverages multimodal neural signals from advanced brain-computer interfaces (BCIs) to enable hands-free image editing, driven solely by your thoughts!
-        </p>
-      </div>
-    </section>
-
     <section class="section" id="news" style="padding-top: 1.5rem; padding-bottom: 1rem;">
       <div class="container is-max-desktop">
         <h2 class="title is-3 section-title" style="margin-bottom: 1rem;"><span role="img" aria-label="news">💡</span> News</h2>
@@ -127,15 +118,24 @@
     <section class="section" id="introduction" style="padding-top: 0.5rem; padding-bottom: 1rem;">
       <div class="container is-max-desktop">
         <h2 class="title is-3 section-title" style="margin-bottom: 0.7rem;"><span role="img" aria-label="book">📖</span> Introduction</h2>
+
         <div class="content is-medium" style="margin-bottom: 0.7rem;">
           <p>
             We introduce <b>LoongX</b>, which effectively integrates multimodal neural signals from datasets L-Mind to guide image editing through Cross-Scale State Space (CS3) encoder and Dynamic Gated Fusion (DGF) modules. Experimental results demonstrate that editing performance using only multimodal neural signals is comparable to text-driven baselines (CLIP-I: 0.6605 vs. 0.6558), and the combination of neural signals with speech instructions surpasses text prompts alone (CLIP-T: 0.2588 vs. 0.2549), proving the method's effectiveness and its significant potential in intuitive and inclusive human-AI interaction.
           </p>
         </div>
-        <br>
-        <img src="static/images/Model.png" alt="model structure" class="model-img" style="width:90%;max-width:140%;display:block;margin:0 auto;transition:width 0.6s cubic-bezier(.4,2,.6,1);">
+        <!-- <br> -->
+        <div class="container is-max-desktop has-text-centered">
+          <img src="static/images/teaser.png" alt="geometric reasoning">
+          <p>
+            LoongX leverages multimodal neural signals from advanced brain-computer interfaces (BCIs) to enable hands-free image editing, driven solely by your thoughts!
+          </p>
+        </div>
+        <!-- <img src="static/images/Model.png" alt="model structure" class="model-img" style="width:90%;max-width:140%;display:block;margin:0 auto;transition:width 0.6s cubic-bezier(.4,2,.6,1);"> -->
       </div>
     </section>
+
+
 
     <section class="section" id="citation" style="padding-top: 1.5rem; padding-bottom: 1.5rem;">
       <div class="container is-max-desktop">
