--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>LoongX: Neural-Driven Image Editing</title>
-  <meta name="description" content="LoongX: Neural-Driven Image Editing. Official homepage for the LoongX project.">
+  <meta name="description"
+    content="LoongX: Neural-Driven Image Editing (NeurIPS 2025). Official homepage for the LoongX project.">
   <meta name="keywords"
     content="LoongX, Neural-Driven Image Editing, Multimodal, State Space, DGF, Cross-Scale, AI, Deep Learning, Computer Vision">
   <meta name="viewport" content="width=device-width, initial-scale=1">
