--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
         <h2 class="subtitle" style="color: #000;">
           <b>Neural-Driven Image Editing</b>
         </h2>
+        <h2 class="subtitle" style="color: #000;">
+          <b>NeurIPS 2025</b>
+        </h2>
         <div style="margin-top:1.2rem;">
           <a href="https://github.com/LanceZPF/loongx" class="button is-dark is-rounded external-link" target="_blank">
             <span class="icon"><i class="fab fa-github"></i></span>
